kustomize/gotify/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  labels:
    app: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: IMAGE_TEMPLATE
          volumeMounts:
            - name: gotify-data
              mountPath: /app/data
              subPath: gotify
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1234
            runAsGroup: 1234
      volumes:
      - name: gotify-data
        persistentVolumeClaim:
          claimName: gotify-data
