kustomize/gotify/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  selector:
    app: gotify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
